corrected a wrongly named model file, adjusted app height (was not centered)

--- a/rick-and-morty-UI/src/assets/scss/grid.scss
+++ b/rick-and-morty-UI/src/assets/scss/grid.scss
@@ -10,7 +10,6 @@
   flex-flow: row wrap;
   align-items: center;
   justify-content: center;
-  height: auto;
   @media (max-width: $medium) {
     flex-flow: column;
     width: 100%;
